--- a/atef/ui/fill_template_page.ui
+++ b/atef/ui/fill_template_page.ui
@@ -27,6 +27,19 @@
       </widget>
      </item>
      <item>
+      <widget class="QPushButton" name="top_open_button">
+       <property name="font">
+        <font>
+         <weight>75</weight>
+         <bold>true</bold>
+        </font>
+       </property>
+       <property name="text">
+        <string>Select File</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <widget class="QLabel" name="type_label">
        <property name="text">
         <string>[file type]</string>
@@ -37,8 +50,14 @@
    </item>
    <item>
     <widget class="QSplitter" name="vert_splitter">
+     <property name="midLineWidth">
+      <number>5</number>
+     </property>
      <property name="orientation">
       <enum>Qt::Vertical</enum>
+     </property>
+     <property name="handleWidth">
+      <number>10</number>
      </property>
      <widget class="QSplitter" name="overview_splitter">
       <property name="orientation">
@@ -91,7 +110,7 @@
           </column>
           <column>
            <property name="text">
-            <string>Signals</string>
+            <string>PVs</string>
            </property>
           </column>
          </widget>
@@ -108,7 +127,7 @@
       </property>
       <property name="minimumSize">
        <size>
-        <width>50</width>
+        <width>200</width>
         <height>0</height>
        </size>
       </property>
@@ -162,7 +181,7 @@
       <property name="frameShadow">
        <enum>QFrame::Raised</enum>
       </property>
-      <layout class="QVBoxLayout" name="verticalLayout_3">
+      <layout class="QHBoxLayout" name="horizontalLayout">
        <property name="leftMargin">
         <number>0</number>
        </property>
@@ -176,24 +195,54 @@
         <number>0</number>
        </property>
        <item>
-        <widget class="QLabel" name="detail_label">
-         <property name="text">
-          <string>Edit Details</string>
+        <layout class="QVBoxLayout" name="verticalLayout_5">
+         <property name="topMargin">
+          <number>0</number>
          </property>
-         <property name="alignment">
-          <set>Qt::AlignCenter</set>
-         </property>
-        </widget>
+         <item>
+          <widget class="QLabel" name="detail_label">
+           <property name="text">
+            <string>Edit Details</string>
+           </property>
+           <property name="alignment">
+            <set>Qt::AlignCenter</set>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QListWidget" name="details_list"/>
+         </item>
+        </layout>
        </item>
        <item>
-        <widget class="QListWidget" name="details_list"/>
-       </item>
-       <item>
-        <widget class="QPushButton" name="stage_all_button">
-         <property name="text">
-          <string>Stage All</string>
+        <layout class="QVBoxLayout" name="verticalLayout_3">
+         <property name="leftMargin">
+          <number>0</number>
          </property>
-        </widget>
+         <item>
+          <widget class="QPushButton" name="stage_all_button">
+           <property name="text">
+            <string>Stage All</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="PyDMDrawingLine" name="PyDMDrawingLine">
+           <property name="toolTip">
+            <string/>
+           </property>
+           <property name="penWidth" stdset="0">
+            <double>5.000000000000000</double>
+           </property>
+           <property name="rotation" stdset="0">
+            <double>90.000000000000000</double>
+           </property>
+           <property name="arrowStartPoint" stdset="0">
+            <bool>true</bool>
+           </property>
+          </widget>
+         </item>
+        </layout>
        </item>
       </layout>
      </widget>
@@ -241,6 +290,12 @@
      </property>
      <item>
       <widget class="QPushButton" name="open_button">
+       <property name="font">
+        <font>
+         <weight>75</weight>
+         <bold>true</bold>
+        </font>
+       </property>
        <property name="text">
         <string>Select File</string>
        </property>
@@ -264,6 +319,13 @@
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>PyDMDrawingLine</class>
+   <extends>QWidget</extends>
+   <header>pydm.widgets.drawing</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
