--- a/atef/ui/template_run_widget.ui
+++ b/atef/ui/template_run_widget.ui
@@ -34,6 +34,13 @@
      </property>
     </widget>
    </item>
+   <item>
+    <widget class="QPushButton" name="reconfigure_button">
+     <property name="text">
+      <string>Re-configure edits</string>
+     </property>
+    </widget>
+   </item>
   </layout>
  </widget>
  <resources/>
